2007-11-27  Simon Goodall  <simon@worldforge.org>

	* libwfut.dox: Add initial doxygen spec file.

2007-09-11  Simon Goodall  <simon@worldforge.org>

	* configure.ac: Fix second curl check.

2007-09-11  Simon Goodall  <simon@worldforge.org>

	* libwfut/WFUT.h: Call shutdown in the destructor if required.

2007-09-11  Simon Goodall  <simon@worldforge.org>

	* configure.ac, libwfut/IO.cpp: Add a configure check to make sure
	  that curl is recent enough to support CURLMOPT_PIPELINING.

2007-09-11  Simon Goodall  <simon@worldforge.org>

	* libwfut/ChannelParser.cpp: Fix includes for make distcheck.

2007-09-05  Simon Goodall  <simon@worldforge.org>

	* acinclude.m4: Include extra python detection macros.

2007-09-03  Simon Goodall  <simon@worldforge.org>

	* configure.ac, Makefile.am, python/Makefile.am, python/WFUT.i,
	  python/__init__.py: Use swig to generate python bindings for
	  libwfut.

2007-09-02  Simon Goodall  <simon@worldforge.org>

	* libwfut/IO.cpp, libwfut/IO.h: Move the common curl options to a
	  separate function. Limit the number of files being downloaded
	  simultaneously. Use IO::get/setMaxDownloads to control this value.
	  It defaults to a value of one, meaning sequential file downloading.
	  This will avoid swamping a web server with connection requests for
	  every single file queued at once.

2007-08-27  Simon Goodall  <simon@worldforge.org>

	* libwfut/IO.cpp, libwfut.h: Follow 301 server redirects. Move
	  DataStruct declaration outside of the IO class namespace.

	* tools/wfut.cpp: Update default update server URL.

2007-08-15  Simon Goodall  <simon@worldforge.org>

	* libwfut/IO.cpp: Include curl error reason in error message when a
	  file fails to download during polling.

2007-05-16  Simon Goodall  <simon@worldforge.org>

	* libwfut/IO.cpp: Cause curl to return an error instead of error pages
	  e.g. for a 404.

2007-05-06  Simon Goodall  <simon@worldforge.org>

	* libwfut/ChannelFileList.h: Added a size() method to return the number