@@ -1,5 +1,10 @@
 2007-11-27  Simon Goodall  <simon@worldforge.org>
 
+	* libwfut/ChannelFileList.h: Make getFile return a const ref. Added
+	  some comments for doxygen.
+
+2007-11-27  Simon Goodall  <simon@worldforge.org>
+
 	* libwfut.dox: Add initial doxygen spec file.
 
 2007-09-11  Simon Goodall  <simon@worldforge.org>
